[package]
name = "artifact-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
tempfile = "3.3.0"
maplit = "1.0.2"
