[package]
name = "artifact-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
chrono = "0.4.23"
differ = "1.0.4"
glob = "0.3.1"
hex = "0.4.3"
json5 = "0.4.1"
rand = "0.8.5"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
sysinfo = "0.27.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tempfile = "3.3.0"

[dev-dependencies]
maplit = "1.0.2"
